# py-audio-effects-autowah

./: .gitignore  README.md  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
autowah/: console.py  control_values.py  envelope_follower.py  variable_cutoff_biquad_filter.py  variable_cutoff_filter.py
resources/: generate-outputs.bash
tests/: test_test.py
