[tool.poetry]
name = "autowah"
version = "0.1.0"
description = ""
authors = ["Christopher Woodall <chris.j.woodall@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18,<1.22"
plotly = "^5.5.0"
scipy = "^1.7.3"
PyAudio = "^0.2.11"
matplotlib = "^3.5.1"
numpy_ringbuffer = "^0.2.1"
numba = "^0.55.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = {version = "^22.1.0", allow-prereleases = true}
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autowah = 'autowah.console:run'

[tool.pytest.ini_options]
addopts = "--cov . -n 2 --cov-report xml:coverage.xml"
